feat: adicionado o website a Maya. refactor: refatorado alguns sistemas como MayaLocale etc.